2008-10-06  kitone  <kitone@gna.org>

	* src/Subtitle.cc:
	* src/utility.cc:
	* src/utility.h:
	Rename function get_num_characters to get_characters_per_line.

2008-10-05  kitone  <kitone@gna.org>

	* src/FileWriter.cc:
	Improve the newline conversion by using Regex.

2008-10-05  kitone  <kitone@gna.org>

	* src/FileWriter.cc:
	Fix: conversion error.

2008-10-05  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	* src/FileReader.h:
	Create lines only if needs.

2008-10-05  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	* src/FileReader.h:
	Add option max_data_size.

	* src/SubtitleFormatSystem.cc:
	* src/SubtitleFormatSystem.h:
	Determine the format with only a small content.

2008-10-05  kitone  <kitone@gna.org>

	* src/gui/Application.cc:
	Split filename (tooltip) with Name and Path.
	Update UI when files are open.

2008-10-04  kitone  <kitone@gna.org>

	* src/FileWriter.cc:
	Add newline conversion.

2008-10-04  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	Fix: default newline value.

2008-10-04  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleFormatSystem.cc:
	* src/formats/AdobeEncoreDVD.h:
	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/MPL2.h:
	* src/formats/MPsub.h:
	* src/formats/MicroDVD.h:
	* src/formats/SubRip.h:
	* src/formats/SubStationAlpha.h:
	* src/formats/SubViewer2.h:
	* src/formats/SubtitleEditorProject.h:
	* src/formats/TimedText.h:
	New files. Append formats.

2008-10-04  kitone  <kitone@gna.org>

	* src/gui/ComboBoxNewLine.cc:
	Add "Macintosh" newline.

2008-10-04  kitone  <kitone@gna.org>

	* src/Document.cc:
	* src/gui/ComboBoxSubtitleFormat.cc:
	* src/gui/DialogFileChooser.cc:
	Restore with SubtitleFormatSystem.

2008-10-04  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleFormat.cc:
	* src/SubtitleFormat.h:
	* src/SubtitleFormatFactory.h:
	* src/SubtitleFormatSystem.cc:
	* src/SubtitleFormatSystem.h:
	New files.
	New Subtitle Format System.

2008-10-04  kitone  <kitone@gna.org>

	* src/ScriptInfo.cc: