@@ -57,8 +57,6 @@ public:
 
 		while(file.getline(line))
 		{
-			se_debug_message(SE_DEBUG_IO, "line '%s'", line.c_str());
-
 			if(line.find("[Script Info]") != Glib::ustring::npos)
 				read_script_info(file);
 			else if(line.find("[V4+ Styles]") != Glib::ustring::npos)
@@ -95,8 +93,6 @@ public:
 		Glib::ustring line;
 		while(file.getline(line) && !line.empty())
 		{
-			se_debug_message(SE_DEBUG_IO, "line '%s'", line.c_str());
-
 			std::vector<Glib::ustring> group = re->split(line);
 
 			if(group.size() == 1)
@@ -127,8 +123,6 @@ public:
 		Glib::ustring line;
 		while(file.getline(line) && !line.empty())
 		{
-			se_debug_message(SE_DEBUG_IO, "line '%s'", line.c_str());
-	
 			std::vector<Glib::ustring> group = re->split(line);
 
 			if(group.size() == 1)
@@ -186,8 +180,6 @@ public:
 		Glib::ustring line;
 		while(file.getline(line) && !line.empty())
 		{
-			se_debug_message(SE_DEBUG_IO, "line '%s'", line.c_str());
-
 			std::vector<Glib::ustring> group = re->split(line);
 
 			if(group.size() == 1)
